# finance_pulse

./: .replit  LICENSE  app.py  database.py  pyproject.toml  requirements.txt  stock_analysis.db  styles.css  utils.py
.streamlit/: config.toml
