[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.2",
    "pandas-ta>=0.3.14b0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "sqlalchemy>=2.0.37",
    "streamlit>=1.42.0",
    "yfinance>=0.2.52",
]
